# sample-ec-service

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  compose.yml
.github/workflows/: ci-inventory.yaml  ci-inventry.yml  ci-order.yaml
frontends/storefront/: CLAUDE.md  package.json  pnpm-lock.yaml  vite.config.ts
frontends/storefront/src/: index.css  main.tsx
frontends/storefront/src/features/order/: api.ts
frontends/storefront/src/features/product/: api.ts
frontends/storefront/src/pages/Account/: index.tsx
frontends/storefront/src/pages/Cart/: index.tsx
frontends/storefront/src/pages/Home/: index.tsx
services/inventory/: Dockerfile  README.md  go.mod  go.sum  main.go
services/inventory/config/: config.go
services/inventory/db/migrations/: 001_create_inventories.sql  002_seed_inventories.sql
services/inventory/internal/domain/: inventory.go  inventory_test.go  repository.go
services/inventory/internal/handler/: inventory.go
services/inventory/internal/usecase/: inventory.go  inventory_test.go
services/order/: Dockerfile  README.md  main.py  pyproject.toml
services/order/config/: config.py
services/order/db/migrations/: 001_create_orders.sql  002_seed_orders.sql
services/order/internal/adapter/http/: order.py
services/order/internal/adapter/kafka/: consumer.py  message.py  producer.py
services/order/internal/domain/: order.py  repository.py
services/order/internal/repository/postgres/: order.py
services/order/internal/usecase/: order.py
services/order/tests/: test_domain.py  test_usecase.py
(+15 files in other folders)
